# SimplePOS

./: CMakeLists.txt  main.cpp
Scanner/: CMakeLists.txt  Main.qml  main.cpp
Terminal/: CMakeLists.txt  Main.qml  main.cpp
include/: CartItem.h  CartItemModel.h  ReceiptPrinter.h  Server.h
legal/: COPYRIGHT.txt  INSTALL.txt  NOTICE.txt
src/: CartItem.cpp  CartItemModel.cpp  ReceiptPrinter.cpp  Server.cpp
ui/: Checkout.qml  CheckoutSummary.qml  ItemsDatabase.qml  Main.qml  MerchantInfoDialog.qml  TaxConfigDialog.qml
